[package]
name = "x13utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
tao = "0.22.2"
tray-icon = "0.9.0"

[dependencies.windows]
version = "0.48"
features = [
    "Foundation",
    "Devices_Power",
]
